--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quiz App</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div id="home" class="flex-center flex-column">
-        <h1>Quiz App</h1>
-        <a class="btn" href="/play.html">Play</a>
-        <a class="btn" href="/highscores.html">High Scores</a>
-      </div>
-    </div>
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Men's shoes</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+       <!-- font awesome -->
+        </head>
+    <body>
+        <h2 id="title">Welcome to the Biggest Online Men's Store</h2>
+        <div class="content">
+            <h3 class="sub-title">CLothes</h3>
+            <div class = "procuct-list">
+                <div class="shoes">
+                </div>
+            </div> 
+    
+            <h3 class="sub-title">Shirts</h3>
+                <div class="shirts">
+                </div>
+        </div>
+            <script src="main.js"></script>
+    </body>
 </html>
